# voicetree-evals

./: .gitignore  .gitmodules  INSTRUCTIONS.md  LICENSE  README.md  forecastbench-plan.md
metabench/kaggle_submission/: README.md  meta_hch_bench.task.json  pyproject.toml  questions.jsonl  writeup-v2-overnight-patches.md  writeup-v2.md  writeup-v3.md  writeup-v3a.md  writeup-v3b.md
metabench/kaggle_submission/eval_harness/: README.md  local_llm.py  run_local.py
metabench/kaggle_submission/generators/: __init__.py  cjs.py  graphcol.py  mbj.py  mwis.py  steiner.py  tsp.py  ve.py
metabench/kaggle_submission/gold/: gold.jsonl
metabench/kaggle_submission/harness/: prompt.py  protocol.py  render_nl.py  runner.py  scoring.py
metabench/kaggle_submission/kaggle/: build_task.py  cell3_subset_evaluate.py  cell4_7row_evaluate.py  combined_7row_single_cell.py  combined_single_cell.py  kernel-metadata.json  notebook.ipynb  task.py
metabench/kaggle_submission/results/: metacog_analysis.md  metacog_calibration_bins.csv  metacog_rollup.csv
metabench/kaggle_submission/results/full/: bulk200-claude-sonnet-4.6-summary.json  bulk200-gemini-flash-latest-summary.json  bulk200-gpt-5.4-mini-summary.json
metabench/kaggle_submission/scripts/: analyze_metacog.py  build_questions.py  build_smoke_questions.py  run_kaggle_production.py  verify_pipeline.py
metabench/kaggle_submission/tests/: test_runner_fixture.py
metabench/kaggle_submission/verifiers/: __init__.py  cjs.py  graphcol.py  mbj.py  mwis.py  steiner.py  tsp.py  ve.py
(+2103 files in other folders)
