[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metabench-kaggle-submission"
version = "0.1.0"
description = "Smoke scaffold for the metabench Kaggle submission package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "kaggle-benchmarks",
  "numpy",
  "ortools",
  "pandas",
]
